2012-09-13  Philip Rogers  <pdr@google.com>

        Add gender-neutral form of webkit-patch land-cowboy
        https://bugs.webkit.org/show_bug.cgi?id=96709

        Reviewed by Adam Barth.

        Add webkit-patch land-cowhand, the confident and courageous form of webkit-patch for everyone.

        * Scripts/webkitpy/tool/commands/download.py:
        (LandCowhand):

2012-09-13  Seokju Kwon  <seokju.kwon@samsung.com>

        [EFL] Remove some parameters in browserCreate()
        https://bugs.webkit.org/show_bug.cgi?id=96499

        Reviewed by Kenneth Rohde Christiansen.

        There are too many parameters in browserCreate(). Lots of it seems like settings from command line argument.
        And I have moved some parameters into User_Arguments.

        * EWebLauncher/main.c:
        (_User_Arguments):
        (_ELauncher):
        (on_key_down):
        (browserCreate):
        (findThemePath):
        (parseUserArguments):
        (main):

2012-09-13  Mark Lam  <mark.lam@apple.com>

        Unreviewed. Adding myself to the committers list.

        * Scripts/webkitpy/common/config/committers.py:

2012-09-13  Ryosuke Niwa  <rniwa@webkit.org>

        run-perf-tests output cryptic error when the config file is missing.
        https://bugs.webkit.org/show_bug.cgi?id=96453

        Reviewed by Tony Chang.

        Add a special error message when a configuration file is missing.

        Also update the help message of --source-json-path to signify the fact it specifies
        the configuration file on performance tests bots.

        * Scripts/webkitpy/performance_tests/perftestsrunner.py:
        (PerfTestsRunner._parse_args):
        (PerfTestsRunner._generate_and_show_results):
        (PerfTestsRunner._merge_slave_config_json):
        * Scripts/webkitpy/performance_tests/perftestsrunner_unittest.py:
        (_test_run_with_json_output): Make upload to fail by default and assert the result
        in the function so that we can return logs instead.